tests/vendor/valid/function_calls/no_arguments/multiple_declarations.c
//expect 3
//tags: functions
int main(void) {
    int f(void);
    int f(void);
    return f();
}

int f(void) {
    return 3;
}