tests/vendor/invalid/syntax/end_before_expr.c
//tags: trivial
int main(void) {
    return